project mostly complete, just missing README

--- a/Develop/style.css
+++ b/Develop/style.css
@@ -9,9 +9,15 @@ textarea{
   border: none;
   resize: none;
   color: #000000;
-  border-left: 1px solid black;
+  /* border-left: 1px solid black; */
   padding: 10px;
 }
+
+
+td {
+  border-left: 1px solid black;
+}
+
 
 .jumbotron {
   text-align: center;
@@ -33,7 +39,7 @@ textarea{
 .row {
   white-space: pre-wrap;
   height: 80px;
-  border-top: 1px solid white;;
+  border-top: 1px solid white;
 }
 
 .hour {
@@ -62,7 +68,9 @@ textarea{
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
+  /* background-color: red; */
   color: white;
+  cursor: pointer;
 }
 
 .saveBtn i:hover {
